fix: harden console downloads and requests